fix[frontend]: Remove global color transition (light & dark mode) on layout. New default font size 16px

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -38,7 +38,7 @@ body {
   color: var(--foreground);
   hover-background: var(--hover-background);
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 input, textarea, select {
